
[package]
name = "rp2040-0816"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-0816"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Outdate arrayvec needed for gcode crate.
arrayvec = { version = "0.5", default-features = false }
base64 = { version = "0.21.5", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.3.1", path = "../third_party/embassy-rs/embassy-executor", features = [
	"nightly",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
	"integrated-timers",
] }
embassy-futures = { version = "0.1.0", path = "../third_party/embassy-rs/embassy-futures" }
embassy-rp = { version = "0.1.0", path = "../third_party/embassy-rs/embassy-rp", features = [
	"defmt",
	"unstable-traits",
	"nightly",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
] }
embassy-sync = { version = "0.4.0", path = "../third_party/embassy-rs/embassy-sync", features = [
	"defmt",
	"nightly",
] }
embassy-time = { version = "0.1.5", path = "../third_party/embassy-rs/embassy-time", features = [
	"nightly",
	"unstable-traits",
	"defmt",
	"defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.1.0", path = "../third_party/embassy-rs/embassy-usb", features = [
	"defmt",
] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
gcode = { version = "0.6.1", default-features = false }
heapless = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-flash = "0.4.0"

[profile.release]
debug = 2
