[package]
name = "pnpfeeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = { version = "1.2.1", default-features = false }
embassy-executor = { version = "0.3.1", path = "../../third_party/embassy-rs/embassy-executor", features = [
	"nightly",
] }
embassy-futures = { version = "0.1.0", path = "../../third_party/embassy-rs/embassy-futures" }
embassy-sync = { version = "0.4.0", path = "../../third_party/embassy-rs/embassy-sync", features = [
	"nightly",
] }
embassy-time = { version = "0.1.5", path = "../../third_party/embassy-rs/embassy-time", features = [
	"nightly",
	"unstable-traits",
] }
embedded-io-async = { version = "0.6.0", default-features = false }
fixed = { version = "1.24", features = ["serde"] }
fixed_gcode = { version = "0.1.0", path = "../../third_party/fixed_gcode", default-features = false }
futures = { version = "0.3.29", default-features = false }
heapless = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
futures-executor = { version = "0.3.17", features = ["thread-pool"] }
futures-test = "0.3.17"
futures-timer = "3.0.2"
futures-util = { version = "0.3.17", features = ["channel"] }

[features]
default = ["std"]
std = [
	"embassy-executor/arch-std",
	"embassy-time/std",
	"embassy-time/generic-queue",
	"embedded-io-async/alloc",
]
